// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > scroll 1`] = `
"- scroll
"
`;

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > scrollUntilVisible 1`] = `
"- scrollUntilVisible:
    element:
      id: "testId"
"
`;

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > swipe command from start to end with percentage coordinates 1`] = `
"- swipe:
    start: 0%, 0%
    end: 100%, 100%
"
`;

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > swipe from start to end 1`] = `
"- swipe:
    start: 0%, 0%
    end: 100%, 100%
"
`;

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > swipeLeft 1`] = `
"- swipe:
    direction: LEFT
    duration: 400
"
`;

exports[`MaestroTranslators Actions - Swipe/Scroll Command Snapshots > swipeRight 1`] = `
"- swipe:
    direction: RIGHT
    duration: 400
"
`;
